# novespace_stream_data

./: .gitignore  .gitlab-ci.yml  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .pylintrc  CITATION.cff  NoSpa_stream.py  README.md  Stream_Novespace_Data.py  do_logging.py  nove_space_stream.py  pyproject.toml  readme.txt  stream_novespace_data.py
src/novespace_stream_data/: __init__.py
src/novespace_stream_data/data/: example_data.csv
src/novespace_stream_data/receive/: __init__.py  nove_space_stream.py
src/novespace_stream_data/scripts/: __init__.py  dataunit_udp_emulator.py  novespace_emulator.py  novespace_stream_data.py  udp_data_receiver.py
