[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novespace_stream_data"
version = "0.3.1"
authors = [{name="Daniel Maier"}, {name="Daniel Mohr"}, {name="Thomas Villatte"}]
description = "`novespace_stream_data$` gets the stream from Novespace/AirZeroG, which is provided in scrientific research flights."
keywords=["data streaming", "scientific data", "parabolic flight",
          "research flight", "Novespace", "Air Zero G", "weightlessness",
	  "data logging", "sensor fusion", "microgravity research",
	  "airzerog", "environmental monitoring"]
readme = "README.md"

requires-python = ">=3.9"

[project.license]
file = "LICENSE.md"
name = "GPL-3.0-or-later"

[project.urls]
homepage = "https://gitlab.com/projects/77217793"
documentation = "https://gitlab.com/ug-cp/novespace_stream_data"
repository = "https://gitlab.com/ug-cp/novespace_stream_data.git"
download = "https://gitlab.com/ug-cp/com/ug-cp/novespace_stream_data/-/releases/permalink/latest"

[project.scripts]
novespace_stream_data_receiver = "novespace_stream_data.scripts.novespace_stream_data:start_nove_space_datastream"
novespace_stream_data_emulator = "novespace_stream_data.scripts.novespace_emulator:start_novespace_emulator"
novespace_stream_data_gui_emulator = "novespace_stream_data.scripts.dataunit_udp_emulator:main"
novespace_stream_data_gui_receiver = "novespace_stream_data.scripts.udp_data_receiver:main"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-xdist"]

[tool.hatch.build.targets.sdist.force-include]
"src/novespace_stream_data/data/example_data.csv" = "novespace_stream_data/data/example_data.csv"

[tool.hatch.build.targets.wheel.force-include]
"src/novespace_stream_data/data/example_data.csv" = "novespace_stream_data/data/example_data.csv"
